--- a/PolyEngine/PolyEngine.vcxproj.filters
+++ b/PolyEngine/PolyEngine.vcxproj.filters
@@ -1,36 +1,63 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Quelldateien">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Headerdateien">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Ressourcendateien">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="PolyEngine">
+      <UniqueIdentifier>{3F82F1B1-2B3A-33FF-9441-0C5B8018CEEF}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PolyEngine\Events">
+      <UniqueIdentifier>{43519456-AF67-92EC-F8DE-1D0E64346374}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\PolyEngine\Core.h">
-      <Filter>Headerdateien</Filter>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
     </ClInclude>
+    <ClInclude Include="src\PolyEngine.h" />
     <ClInclude Include="src\PolyEngine\Application.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>PolyEngine</Filter>
     </ClInclude>
-    <ClInclude Include="src\PolyEngine.h">
-      <Filter>Headerdateien</Filter>
+    <ClInclude Include="src\PolyEngine\Core.h">
+      <Filter>PolyEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\PolyEngine\EntryPoint.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>PolyEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\PolyEngine\Events\ApplicationEvent.h">
+      <Filter>PolyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PolyEngine\Events\Event.h">
+      <Filter>PolyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PolyEngine\Events\KeyEvent.h">
+      <Filter>PolyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PolyEngine\Events\MouseEvent.h">
+      <Filter>PolyEngine\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PolyEngine\Log.h">
+      <Filter>PolyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PolyEngine\Window.h">
+      <Filter>PolyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pepch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\PolyEngine\Application.cpp">
-      <Filter>Quelldateien</Filter>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
+    <ClCompile Include="src\PolyEngine\Application.cpp">
+      <Filter>PolyEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PolyEngine\Log.cpp">
+      <Filter>PolyEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\pepch.cpp" />
   </ItemGroup>
 </Project>
