Implemented ImGui Events

--- a/PolyEngine/PolyEngine.vcxproj.filters
+++ b/PolyEngine/PolyEngine.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="PolyEngine\Events">
       <UniqueIdentifier>{43519456-AF67-92EC-F8DE-1D0E64346374}</UniqueIdentifier>
     </Filter>
+    <Filter Include="PolyEngine\ImGui">
+      <UniqueIdentifier>{A96A281A-9563-476C-BE95-2CF1AAED2678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGlRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -40,6 +49,9 @@
     <ClInclude Include="src\PolyEngine\Events\MouseEvent.h">
       <Filter>PolyEngine\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\PolyEngine\ImGui\ImGuiLayer.h">
+      <Filter>PolyEngine\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\PolyEngine\Layer.h">
       <Filter>PolyEngine</Filter>
     </ClInclude>
@@ -53,15 +65,19 @@
       <Filter>PolyEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\pepch.h" />
-    <ClInclude Include="src\PolyEngine\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGlRenderer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\PolyEngine\Application.cpp">
       <Filter>PolyEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PolyEngine\ImGui\ImGuiLayer.cpp">
+      <Filter>PolyEngine\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\PolyEngine\Layer.cpp">
       <Filter>PolyEngine</Filter>
@@ -73,7 +89,5 @@
       <Filter>PolyEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\pepch.cpp" />
-    <ClCompile Include="src\PolyEngine\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp" />
   </ItemGroup>
 </Project>
