--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,10 +1,41 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
-Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
-Collapsed=0
+Pos=818,76
+Size=414,609
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,324
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+
+[Window][Example: Custom rendering]
+Pos=53,240
+Size=668,418
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
+
+[Window][Example: Auto-resizing window]
+Pos=289,187
+Size=514,352
+
+[Window][Example: Simple layout]
+Pos=160,127
+Size=500,440
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
