finishing up imgui

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,41 +1,68 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=818,76
-Size=414,609
+ViewportPos=1985,271
+ViewportId=0xE927CF2F
+Size=363,377
+Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=60,60
 Size=339,324
+Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+ViewportPos=1830,371
+ViewportId=0x46B5E99C
+Size=323,609
+Collapsed=0
 
 [Window][Example: Custom rendering]
 Pos=53,240
 Size=668,418
+Collapsed=0
 
 [Window][Example: Documents]
 Pos=60,60
 Size=607,921
+Collapsed=0
 
 [Window][Example: Auto-resizing window]
 Pos=289,187
 Size=514,352
+Collapsed=0
 
 [Window][Example: Simple layout]
 Pos=160,127
 Size=500,440
+Collapsed=0
 
 [Window][Example: Simple layout/left pane_AED60EF8]
 IsChild=1
 Size=150,386
 
+[Window][DockSpace Demo]
+Size=2560,1377
+Collapsed=0
+
+[Window][Test]
+Pos=320,283
+Size=205,104
+Collapsed=0
+
+[Window][MousePos]
+ViewportPos=842,395
+ViewportId=0x04F44C5B
+Size=86,48
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
+
+[Docking][Data]
 
