--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "PolyEngine/vendor/spdlog"]
 	path = PolyEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
-[submodule "PolyEngine/vendor/GLFW"]
-	path = PolyEngine/vendor/GLFW
-	url = https://github.com/TheCherno/GLFW
 [submodule "PolyEngine\\vendor\\imgui"]
 	path = PolyEngine\\vendor\\imgui
 	url = https://github.com/DominicMause/imgui
+[submodule "PolyEngine\\vendor\\glm"]
+	path = PolyEngine\\vendor\\glm
+	url = https://github.com/g-truc/glm
+[submodule "PolyEngine\\vendor\\GLFW"]
+	path = PolyEngine\\vendor\\GLFW
+	url = https://github.com/DominicMause/glfw
