--- a/PolyEngine/PolyEngine.vcxproj
+++ b/PolyEngine/PolyEngine.vcxproj
@@ -148,25 +148,25 @@
     <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\PolyEngine.h" />
-    <ClInclude Include="src\PolyEngine\Application.h" />
-    <ClInclude Include="src\PolyEngine\Core.h" />
-    <ClInclude Include="src\PolyEngine\EntryPoint.h" />
+    <ClInclude Include="src\PolyEngine\Core\Application.h" />
+    <ClInclude Include="src\PolyEngine\Core\Core.h" />
+    <ClInclude Include="src\PolyEngine\Core\EntryPoint.h" />
     <ClInclude Include="src\PolyEngine\Events\ApplicationEvent.h" />
     <ClInclude Include="src\PolyEngine\Events\Event.h" />
     <ClInclude Include="src\PolyEngine\Events\KeyEvent.h" />
     <ClInclude Include="src\PolyEngine\Events\MouseEvent.h" />
     <ClInclude Include="src\PolyEngine\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\PolyEngine\Input.h" />
-    <ClInclude Include="src\PolyEngine\KeyCodes.h" />
-    <ClInclude Include="src\PolyEngine\Layer.h" />
-    <ClInclude Include="src\PolyEngine\LayerStack.h" />
-    <ClInclude Include="src\PolyEngine\Log.h" />
-    <ClInclude Include="src\PolyEngine\MouseButtonCodes.h" />
+    <ClInclude Include="src\PolyEngine\Input\Input.h" />
+    <ClInclude Include="src\PolyEngine\Input\KeyCodes.h" />
+    <ClInclude Include="src\PolyEngine\Core\Layer.h" />
+    <ClInclude Include="src\PolyEngine\Core\LayerStack.h" />
+    <ClInclude Include="src\PolyEngine\Core\Log.h" />
+    <ClInclude Include="src\PolyEngine\Input\MouseButtonCodes.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Renderer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Shader.h" />
-    <ClInclude Include="src\PolyEngine\Window.h" />
+    <ClInclude Include="src\PolyEngine\Core\Window.h" />
     <ClInclude Include="src\pepch.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
@@ -590,12 +590,12 @@
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsWindow.cpp" />
-    <ClCompile Include="src\PolyEngine\Application.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\Application.cpp" />
     <ClCompile Include="src\PolyEngine\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\PolyEngine\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\PolyEngine\Layer.cpp" />
-    <ClCompile Include="src\PolyEngine\LayerStack.cpp" />
-    <ClCompile Include="src\PolyEngine\Log.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\Layer.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\LayerStack.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\Log.cpp" />
     <ClCompile Include="src\pepch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
