--- a/PolyEngine/PolyEngine.vcxproj.filters
+++ b/PolyEngine/PolyEngine.vcxproj.filters
@@ -1354,6 +1354,8 @@
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Renderer.h" />
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\PolyEngine\Renderer\VertexArray.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLVertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp">
@@ -1389,5 +1391,7 @@
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\Renderer.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\PolyEngine\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLVertexArray.cpp" />
   </ItemGroup>
 </Project>
