--- a/PolyEngine/PolyEngine.vcxproj.filters
+++ b/PolyEngine/PolyEngine.vcxproj.filters
@@ -1359,6 +1359,7 @@
     <ClInclude Include="src\PolyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\PolyEngine\Renderer\RenderCommand.h" />
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\PolyEngine\Renderer\OrtographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp">
@@ -1399,5 +1400,6 @@
     <ClCompile Include="src\PolyEngine\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\PolyEngine\Renderer\OrtographicCamera.cpp" />
   </ItemGroup>
 </Project>
